<resources>
    <string name="app_name">Coffee Order</string>
    <string name="cream">Cream</string>
    <string name="lower_coffee_limit">Cannot order lower than 1!</string>
    <string name="toppings">topping</string>
    <string name="name">Customer Name: </string>
    <string name="chocolate">Chocolate</string>
    <string name="order">Order</string>
    <string name="order_summary">Order Summary</string>
    <string name="order_summary_chocolate">Has chocolate: </string>
    <string name="order_summary_email_subject">Order Coffee</string>
    <string name="order_summary_name">Name: </string>
    <string name="order_summary_price">Total Price: </string>
    <string name="order_summary_quantity">Quantity</string>
    <string name="order_summary_whipped_cream">Has cream: </string>
    <string name="quantity">Quantity</string>
    <string name="thank_you">Thank you!</string>
</resources>
